CIRC-2099 added circulation setting module permission